dice only roll 1 set --- added logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Zilch</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.4.2/js/all.js" integrity="sha384-wp96dIgDl5BLlOXb4VMinXPNiB32VYBSoXOoiARzSTXY+tsK8yDTYfvdTyqzdGGN"
@@ -17,12 +17,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mt-0">
         <a class="navbar-brand" href="index.html"></a>
-        <span style="font-size: 36px; color: white;">
-            <i class="fas fa-dice fa-2x border rounded-circle bg-success"></i>
-        </span>
-        <p class="zhead"> Zilch - The Best Dice Game Around!</p>
+        
+        <p class="zhead"> <img src="./assets/images/zilchlogo.gif" class="zlogo mt-0"> </p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -124,7 +122,10 @@
 
 
     <footer class="row mt-12 fixed-bottom">
-        <div class="col-12">
+        <div class="col-6">
+                <span style="font-size: 36px; color: white;">
+                        <i class="fas fa-dice fa-1x border rounded-circle bg-success"></i></div>
+                    </span><div class="col-6">
             <div class="text-justify foot">Copyright 2018 - Zilch </div>
 
     </footer>
