added pro gamin board

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mt-0">
+    <nav class="navbar navbar-expand-lg navbar-light mt-0">
         <a class="navbar-brand" href="index.html"></a>
 
         <!-- logo image old code -->
 
-        <p class="zhead"> <img src="./assets/images/Zilch_logo1.jpg" class="zlogo mt-0"> </p>
+        <p class="zhead border border-rounded"> <img src="./assets/images/Zilch_logo1.jpg" class="zlogo mt-0"> </p>
 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -95,7 +95,7 @@
 
 
                             <div class="card bg-dark text-white">
-                                <img class="card-img" src="./assets/images/Zilchtable_500pix.jpg" alt="Card image">
+                                <img class="card-img" src="./assets/images/Zilch_Table.jpg" alt="Card image">
                                 <div class="card-img-overlay"> 
                                     <h5 class="card-title">Result: <span id="user-text"> Ready to roll!</span></h5>
                                     <p class="card-text"><h4>Turn: <span id="turn-text"></span></h4></p>
@@ -130,17 +130,18 @@
         </div>
     </div>
     </div>
-
+<div class="container-fluid">
 
     <footer class="row mt-12 fixed-bottom">
         <div class="col-6">
-            <span style="font-size: 36px; color: white;">
-                <i class="fas fa-dice fa-1x border rounded-circle bg-success"></i></div>
+            <!-- <span style="font-size: 36px; color: white;">
+                <i class="fas fa-dice fa-1x border rounded-circle bg-success"></i></div> -->
         </span>
         <div class="col-6">
             <div class="text-justify foot">Copyright 2018 - Zilch </div>
 
     </footer>
+</div>
 
     <!-- Main JavaScript Source Link -->
 
