--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row-md-12 border-top mt-3 h-12">
             <div class="game-container mt-2">
-                <div class="col-md-10 float-left bg-dark border border-info rounded">
+                <div class="col-md-10 float-left bg-dark">
 
 
 
