--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col">
                 <!-- logo image code -->
-                <p class="zhead border border-rounded text-center"> <img src="./assets/images/Zilch_logo1.jpg" class="zlogo ">
+                <p class="zhead text-center mt-2 mb-0"> <img src="./assets/images/Zilch_logo1.jpg" class="zlogo ">
                 </p>
             </div>
 
@@ -40,15 +40,15 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Play
+                                <a class="nav-link text-right" href="#">Play
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">How to Play</a>
+                                <a class="nav-link text-right" href="#">How to Play</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link text-right" href="#">Contact</a>
                             </li>
                         </ul>
                     
