--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -73,6 +73,9 @@
                             <h3>Hold Area</h3>
                         </div>
                         <div class="col">
+                            <h3>Bank<span id="bank-text"></span></h3>
+                        </div>
+                        <div class="col">
 
                             <!-- <span style="font-size: 48px; color: #d9534f;">
                                 <i class="fas fa-dice-one "></i>
@@ -108,7 +111,7 @@
                             <div class="card bg-dark text-white">
                                 <img class="card-img" src="./assets/images/Zilch_Table.jpg" alt="Card image">
                                 <div class="card-img-overlay">
-                                    <h5 class="card-title">Result: <span id="user-text"> Ready to roll!</span></h5>
+                                    <h5 class="card-title">Result: <span id="result-text"> Ready to roll!</span></h5>
                                     <p class="card-text">
                                         <h4>Turn: <span id="turn-text"></span></h4>
                                     </p>
