--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                         </div>
 
                         <div class="col">
-                            <div id="holdArea"class="holdArea">
+                            <div id="holdArea" class="holdArea">
                                 <div class="diceProps">
-                                  
+
 
                                 </div>
 
@@ -106,24 +106,7 @@
 
                         <div class="col">
 
-                            <!-- <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-one "></i>
-                            </span>
-                            <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-two "></i>
-                            </span>
-                            <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-three "></i>
-                            </span>
-                            <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-four "></i>
-                            </span>
-                            <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-five "></i>
-                            </span>
-                            <span style="font-size: 48px; color: #d9534f;">
-                                <i class="fas fa-dice-six "></i>
-                            </span> -->
+
                         </div>
 
                     </div>
@@ -131,13 +114,10 @@
                         <div class="col">
 
 
-
-
-
                             <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1>
 
 
-                            <div class="card bg-dark text-white">
+                            <div class="card text-white">
                                 <img class="card-img" src="./assets/images/Zilchtable.jpg" alt="Card image">
                                 <div class="card-img-overlay">
                                     <h5 class="card-title">Result: <span id="result-text"> Ready to roll!</span></h5>
@@ -147,6 +127,9 @@
                                     <p class="card-text">
                                         <h4>Round: <span id="round-text"></span></h4>
                                     </p>
+                                    <p class="card-text">
+                                        <h4> <span id="message-text"></span></h4>
+                                    </p>
                                     <p class="card-text diceProps">
                                         <div id="img1"></div>
                                         <div id="img2"></div>
@@ -155,7 +138,7 @@
                                         <div id="img5"></div>
                                         <div id="img6"></div>
                                     </p>
-                                  
+
                                 </div>
                             </div>
 
