updated messages fixed dice to row added sixth die to showing empty rolls when new roll occurs

--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
                                         <h4> <span id="message-text"></span></h4>
                                     </p>
                                     <p class="card-text diceProps">
-                                        <div id="img1"></div>
-                                        <div id="img2"></div>
-                                        <div id="img3"></div>
-                                        <div id="img4"></div>
-                                        <div id="img5"></div>
-                                        <div id="img6"></div>
+                                        <div id="img0" class="float-left"></div>
+                                        <div id="img1" class="float-left"></div>
+                                        <div id="img2" class="float-left"></div>
+                                        <div id="img3" class="float-left"></div>
+                                        <div id="img4" class="float-left"></div>
+                                        <div id="img5" class="float-left"></div>
+                                       
                                     </p>
 
                                 </div>
