--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
                         <div class="col">
 
 
-                            <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1>
-
+                            <!--Old Roll BTN 
+                                <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1> -->
+                            <div id="roll-cup" class="rollCup"></div>
 
                             <div class="card text-white">
                                 <img class="card-img" src="./assets/images/Zilchtable.jpg" alt="Card image">
@@ -137,7 +138,7 @@
                                         <div id="img3" class="float-left"></div>
                                         <div id="img4" class="float-left"></div>
                                         <div id="img5" class="float-left"></div>
-                                       
+
                                     </p>
 
                                 </div>
