updated board position

--- a/index.html
+++ b/index.html
@@ -83,54 +83,11 @@
             <div class="game-container mt-2">
                 <div class="col-md-10 float-left bg-dark">
 
-
-
                     <div class="row">
                         <div class="col">
-                            <h4>Roll#:<span id="rollcount-text"></span></h4>
-                        </div>
-
-                        <div class="col">
-                            <div id="holdArea" class="holdArea">
-                                <div class="diceProps">
-
-
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="col">
-                            <h3>Bank<span id="bank-text"></span></h3>
-                        </div>
-
-                        <div class="col">
-
-
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="col">
-
-
-                            <!--Old Roll BTN 
-                                <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1> -->
-                            <div id="roll-cup" class="rollCup"></div>
-
                             <div class="card text-white">
                                 <img class="card-img" src="./assets/images/Zilchtable.jpg" alt="Card image">
                                 <div class="card-img-overlay">
-                                    <h5 class="card-title">Result: <span id="result-text"> Ready to roll!</span></h5>
-                                    <p class="card-text">
-                                        <h4>Turn: <span id="turn-text"></span></h4>
-                                    </p>
-                                    <p class="card-text">
-                                        <h4>Round: <span id="round-text"></span></h4>
-                                    </p>
-                                    <p class="card-text">
-                                        <h4> <span id="message-text"></span></h4>
-                                    </p>
                                     <p class="card-text diceProps">
                                         <div id="img0" class="float-left"></div>
                                         <div id="img1" class="float-left"></div>
@@ -141,9 +98,68 @@
 
                                     </p>
 
+
                                 </div>
                             </div>
 
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="card-title">Result: <span id="result-text"> Ready to roll!</span></h5>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4>Roll#:<span id="rollcount-text"></span></h4>
+                        </div>
+                    </div>
+                    <div class="row">
+
+                        <div class="col">
+                            <div id="holdArea" class="holdArea diceProps float-left">
+
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col">
+                        <h3>Bank<span id="bank-text"></span></h3>
+                    </div>
+
+                    <div class="col">
+
+
+                    </div>
+
+
+
+                    <div class="row">
+                        <div class="col">
+
+
+                            <!--Old Roll BTN 
+                                <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1> -->
+                            <div id="roll-cup" class="rollCup"></div>
+
+
+
+
+                        </div>
+                        <div class="col">
+                            <p class="card-text">
+                                <h4>Turn: <span id="turn-text"></span></h4>
+                            </p>
+                            <p class="card-text">
+                                <h4>Round: <span id="round-text"></span></h4>
+                            </p>
+                            <p class="card-text">
+                                <h4> <span id="message-text"></span></h4>
+                            </p>
 
                         </div>
                     </div>
