--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="row">
 
                         <div class="col">
-                            <div id="holdArea" class="holdArea diceProps float-left">
+                            <div id="holdArea" class="holdArea">
 
 
                             </div>
