moved loadcup and start game

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <h5 class="card-title">Result: <span id="result-text"> Ready to roll!</span></h5>
+                            <h5 class="card-title"><span id="result-text"> Press Cup to Roll!</span></h5>
                         </div>
 
                     </div>
                     <div class="row">
                         <div class="col">
-                            <h4>Roll#:<span id="rollcount-text"></span></h4>
+                            <h4><span id="rollcount-text"></span></h4>
                         </div>
                     </div>
                     <div class="row">
@@ -128,7 +128,7 @@
 
 
                     <div class="col">
-                        <h3>Bank<span id="bank-text"></span></h3>
+                        <h3><div id="value-text"></div></h3>
                     </div>
 
                     <div class="col">
@@ -142,9 +142,8 @@
                         <div class="col">
 
 
-                            <!--Old Roll BTN 
-                                <h1><button id="roll-button" class="btn btn-primary btn-lg">Roll</button></h1> -->
-                            <div id="roll-cup" class="rollCup"></div>
+                           
+                            <div id="roll-cup" class="rollCup ml-4 mb-2"></div>
 
 
 
@@ -152,10 +151,10 @@
                         </div>
                         <div class="col">
                             <p class="card-text">
-                                <h4>Turn: <span id="turn-text"></span></h4>
+                                <h4><span id="turn-text"></span></h4>
                             </p>
                             <p class="card-text">
-                                <h4>Round: <span id="round-text"></span></h4>
+                                <h4><span id="round-text"></span></h4>
                             </p>
                             <p class="card-text">
                                 <h4> <span id="message-text"></span></h4>
