--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="card-img-overlay">
 
                 <!-- Dice Area contain !needs margins changed for screen size-->
-                <div class="dice-area m-2">
+                <div class="dice-area m-2 mt-3">
                     <!-- Dice Area Main Row -->
                     <div class="row-sm-12">
                         <div class="row mb-3">
