--- a/index.html
+++ b/index.html
@@ -30,138 +30,74 @@
     <!-- Main Container Begin -->
     <div class="container-fluid w-100 h-100 m-0">
         <!-- Begin 1st Row -->
-        <div class="row-sm-12 row-justify-content-start h-100 m-0">
-            <!-- Card Goes Here -->
-            <img class="card card-img-top m-0" src="./assets/images/Zilchtable.jpg" alt="-Zilch Table-">
-            <!-- Main Board Text Overlay Starts Here -->
-            <div class="card-img-overlay">
+        <div class="row row-justify-content-start h-100 m-0">
+            <div class="col"> 
+                <!-- Card Goes Here -->
+                 -Player1-
+                <!-- Player 3, --> Player3
+                <img class="card card-img-top m-0" src="./assets/images/Zilchtable.jpg" alt="-Zilch Table-">
+                <!-- Main Board Text Overlay Starts Here -->
+                <div class="card-img-overlay">
 
-                <!-- Dice Area contain !needs margins changed for screen size-->
-                <div class="dice-area m-2 mt-3">
-                    <!-- Dice Area Main Row -->
-                    <div class="row-sm-12">
-                        <div class="row mb-3">
+                    <!-- Dice Area contain !needs margins changed for screen size-->
+                    <div class="dice-area m-2 mt-3">
 
-                            <!-- Player 1 , Dice Sort, Points, Message, Player 2 -->
-                            <div class="col-4">-Player1-
-                                <div id="roll-cup" class="rollCup"></div>
-                            </div>
-                            <div class="col-4">
-                                <div class="row">
-                                    <div class="col">
-                                        <span id="result-text"> -Dice Sort-</span>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><div id="value-text"></div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><span id="message-text"></span></div>
-                                </div>
+                    </div>
+                    <div class="col">
 
-                            </div>
-                            <div class="col-4">-Player2-</div>
+                        <!-- Player 1 , Dice Sort, Points, Message, Player 2 -->
 
-                        </div>
+                        <div id="roll-cup" class="rollCup"></div>
+                    </div>
+                    <div class="col">
+                        <span id="turn-text"></span>
+                        <span id="result-text"> -Dice Sort-</span>
+                        <span id="round-text">
+                            <div id="value-text"></div>
+                            <span id="message-text"></span>
+                            <!-- *Card-text !Important - Shows the Dice-->
+                            <div class="card-text "></div>
+                            <div id="img0" class="float-left"></div>
+                            <div id="img1" class="float-left"></div>
+                            <div id="img2" class="float-left"></div>
+                            <div id="img3" class="float-left"></div>
+                            <div id="img4" class="float-left"></div>
+                            <div id="img5" class="float-left"></div>
+                    </div>
+                    <!-- Hold Area-->
+                    <div id="holdArea" class="holdArea">
+                    </div>
+                    <div class="col">
+                        -Player2-
+                        <!-- Player 5,-->Player5
 
-
-                        <!-- Player 3, Dice, Player 4 -->
-                        <div class="top-spacer">
-                            <div class="row">
-                                <div class="col">Player3</div>
-                                <div class="col"></div>
-
-
-                                <div class="col-6">
-                                    <!-- *Card-text !Important - Shows the Dice-->
-                                    <div class="card-text "></div>
-                                    <div id="img0" class="float-left"></div>
-                                    <div id="img1" class="float-left"></div>
-                                    <div id="img2" class="float-left"></div>
-                                    <div id="img3" class="float-left"></div>
-                                    <div id="img4" class="float-left"></div>
-                                    <div id="img5" class="float-left"></div>
-                                </div>
-                                <div class="col"></div>
-                                <div class="col">Player4</div>
-                            </div>
-
-                        </div>
-
-                        <div class="bottom-spacer">
-                            <div class="row mt-6">
-                                <div class="col">
-                                    <!-- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
-        exercitationem esse enim atque dolor ex explicabo tempore, unde harum quas nostrum ipsa facere 
-        quia, quasi assumenda vero adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
-        exercitationem esse enim atque dol -->
-                                </div>
-                            </div>
-
-                            <!-- Player 5, Hold Area, Player 6 -->
-
-                            <div class="row ">
-                                <div class="col">Player5</div>
-
-
-
-                                <div class="col">
-                                    <!-- Hold Area-->
-                                    <div id="holdArea" class="holdArea">
-                                    </div>
-                                </div>
-
-                                <div class="col">Player6</div>
-                            </div>
-
-
-                            <!-- End of Bottom Spacer -->
-                        </div>
-
-                        <div class="row">
-                            <div class="col">
-                                <span id="turn-text"></span>
-                            </div>
-
-                            <div class="col">
-                                <span id="round-text"></span>
-                            </div>
-
-                            <div class="col">
-
-                            </div>
-                        </div>
-
-
-
-
-                        <!-- End of Main Row -->
-
+                    </div>
+                    <div class="col">
+                        Player4
                     </div>
 
 
-
-
-
-
+                    <!-- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
+        exercitationem esse enim atque dolor ex explicabo tempore, unde harum quas nostrum ipsa facere 
+        quia, quasi assumenda vero adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
+        exercitationem esse enim atque dol -->
 
 
 
 
                     <!-- Dice Area Main Row Ends Below -->
+
+
+                    <!-- Dice Area Main Div -->
                 </div>
 
-                <!-- Dice Area Main Div -->
+                <!-- Overlay End Below-->
             </div>
 
-            <!-- Overlay End Below-->
+            <!-- 1st Row Main 100w 100h Below -->
         </div>
 
-        <!-- 1st Row Main 100w 100h Below -->
-    </div>
-
-    <!-- Main Container Below -->
+        <!-- Main Container Below -->
     </div>
 
 
