added dynamic players

--- a/index.html
+++ b/index.html
@@ -38,84 +38,109 @@
                 <img class="card card-img-top m-0" src="./assets/images/Zilchtable.jpg" alt="-Zilch Table-">
                 <!-- Main Board Text Overlay Starts Here -->
                 <div class="card-img-overlay">
+
+                    <!-- Main Game Overlay Row -->
                     <div class="row">
 
                         <!-- First Col -->
                         <div class="col">
-                            <div class="player3" id="player3">
-                                <!-- Player 3, --> Player3 <img src="./assets/images/avatar3.png" class="img img-fluid">
-                            </div>
+                            <!-- Player 3 -->
+                            <div class="player3" id="player3"></div>
 
                         </div>
 
+
+
+                        <!-- Second Col -->
                         <div id="col2" class="col ">
 
-                            <!-- Player 1 -->
-                            <div class="player1" id="player1">
-                                Player1
-                                <img src="./assets/images/avatar1.png" class="img img-fluid">
-                            </div>
-                            <!-- ,  Player 5 -->
-                            <div class="player5" id="player5">
-                                Player5<img src="./assets/images/avatar5.png" class="img img-fluid">
-                            </div>
+                            <!--Player 1 -->
+                            <div class="player1" id="player1"></div>
+
+                            <!--Player 5 -->
+                            <div class="player5" id="player5"></div>
                         </div>
+
+
+
+
+                        <!-- Third Col -->
+
                         <div id="col3" class="col">
-                            <!-- Dice Sort, Points, Message, -->
+
+                            <!-- Hold Area-->
+                            <p>
+                                <div id="holdArea" class="holdArea"></div>
+                            </p>
 
 
-                            <!-- Dice Area contain !needs margins changed for screen size -->
-                            <div class="dice-area m-2 mt-3"></div>
                             <div id="roll-cup" class="rollCup"></div>
                             <span id="turn-text"></span>
-                            <span id="result-text"> -Dice Sort-</span>
+
+                            <!-- Dice Sort -->
+                            <p><span id="result-text"></span></p>
+
                             <span id="round-text"></span>
-                                <div id="value-text"></div>
-                                <span id="message-text"></span>
-                                <!-- *Card-text !Important - Shows the Dice-->
-                                <div class="card-text "></div>
+
+                            <!-- Points  -->
+                            <div id="value-text"></div>
+
+                            <!-- Message, -->
+                            <span id="message-text"></span>
+
+                            <!-- Dice Area contain !needs margins changed for screen size -->
+                            <div class="dice-area">
+
                                 <div id="img0" class="float-left"></div>
                                 <div id="img1" class="float-left"></div>
                                 <div id="img2" class="float-left"></div>
                                 <div id="img3" class="float-left"></div>
                                 <div id="img4" class="float-left"></div>
                                 <div id="img5" class="float-left"></div>
-                        </div>
-
-
-                        <!-- Hold Area-->
-                        <div id="holdArea" class="holdArea">
-                        </div>
-                        <div id="col4" class="col">
-                                <!-- Player 2 s -->
-                            <div class="player2" id="player2">
-                                -Player2-<img src="./assets/images/avatar2.png" class="img img-fluid"></div>
-
-                            <!-- Player 6,-->
-                            <div class="player6" id="player6">Player6
-                                <img src="./assets/images/avatar6.png" class="img img-fluid">
                             </div>
+
                         </div>
+
+
+
+
+
+
+                        <!-- Fourth Col -->
+                        <div id="col4" class="col">
+
+                            <!-- Player 2-->
+                            <div class="player2" id="player2"></div>
+
+                            <!-- Player 6-->
+                            <div class="player6" id="player6">Player6</div>
+                        </div>
+
+
+
+                        <!-- Fifth Col -->
                         <div id="col5" class="col">
-                            <div class="player4" id="player4">Player4
-                                <img src="./assets/images/avatar4.png" class="img img-fluid"></div>
+                            <div class="player4" id="player4">
+                            </div>
 
                         </div>
 
 
-                        <!-- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
-        exercitationem esse enim atque dolor ex explicabo tempore, unde harum quas nostrum ipsa facere 
-        quia, quasi assumenda vero adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore maxime neque 
-        exercitationem esse enim atque dol -->
-
-
-                        <!-- Overlay End Below-->
 
 
 
+
+
+                        <!-- Main Game Overlay Row Ends Below-->
                     </div>
-                    <!-- container col end below -->
+
+
+
+                    <!-- Overlay End Below-->
+
                 </div>
+                <!-- container col end below -->
+
             </div>
 
             <!-- 1st Row Main 100w 100h Below -->
