--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
 
 
 <body>
+    <!-- Modal -->
+        <div id=myModal class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Zilch!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-footer">
+    
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+        </div>
     <!-- Main Container Begin -->
     <div class="container-fluid w-100 h-100 m-0">
         <!-- Begin 1st Row -->
