changed table to 768

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <!-- Begin 1st Row -->
         <div class="row row-justify-content-start h-100 m-0">
             <!-- container col -->
-            <div id="col" class="col col-contain">
+            <div id="col" class="col-xs-12 col-contain">
                 <!-- Card Goes Here -->
 
-                <img class="card card-img-top m-0 table" src="./assets/images/Zilchtable.png" alt="-Zilch Table-">
+                <img class="img-responsive card card-img-top m-0 table" src="./assets/images/Zilchtable.jpg" alt="-Zilch Table-">
                 <!-- Main Board Text Overlay Starts Here -->
                 <div class="card-img-overlay">
 
