diff table testing

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="col" class="col-xs-12 col-contain">
                 <!-- Card Goes Here -->
 
-                <img class="img-responsive card card-img-top m-0 table" src="./assets/images/Zilchtable.jpg" alt="-Zilch Table-">
+                <img class="img-responsive card card-img-top m-0 table" src="./assets/images/Zilchtable.png" alt="-Zilch Table-">
                 <!-- Main Board Text Overlay Starts Here -->
                 <div class="card-img-overlay">
 
